done with css change

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -5,8 +5,11 @@
     ViewData["Title"] = "Admin";
 }
 
+<div class="content_just_left">
+    
 <h1>Admin</h1>
 <partial name="_FlashPartial" />
+
 
 <div><a href="/Admin/Users">Users</a></div>
 <br>
@@ -32,3 +35,4 @@
 @section Scripts {
     
 }
+</div>
