--- a/Pages/ResetPassword.cshtml
+++ b/Pages/ResetPassword.cshtml
@@ -12,19 +12,22 @@
 <h1>Reset Password</h1>
 <partial name="_FlashPartial" />
 
-<div class="form_div">
 <form method="post">
-    <div>
-        <label>Password</label>
-        <input type="password" asp-for="password" />
-    </div>
-    <div>
-        <label>Re-enter password</label>
-        <input type="password" asp-for="retyped_password" />
-    </div>
-    <div><button type="submit">Reset Password</button>
+    <table class="form_table">
+    <tr>
+        <td><label>Password</label>
+        <td><input type="password" asp-for="password" />
+    </tr>
+    <tr>
+        <td><label>Re-enter password</label>
+        <td><input type="password" asp-for="retyped_password" />
+    </tr>
+    <tr>
+        <td><button type="submit">Reset Password</button>
+    </tr>
+    </table>
 </form>
-</div>
+
 <div><a href="Login">Login</a></div>
 
 @section Scripts {
