--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -12,19 +12,22 @@
 <h1>Login</h1>
 <partial name="_FlashPartial" />
 
-<div class="form_div">
-    <form class="login_form" method="post">
-        <div>
-            <label>Username or Email</label>
-            <input asp-for="username" />
-        </div>
-        <div>
-            <label>Password</label>
-            <input type="password" asp-for="password" />
-        </div>
-        <div><button type="submit">Login</button></div>
-    </form>
-</div>
+
+<form class="login_form" method="post">
+    <table class="form_table">
+        <tr>
+            <td><label>Username or Email</label>
+            <td><input asp-for="username" />
+        </tr>
+        <tr>
+            <td><label>Password</label>
+            <td><input type="password" asp-for="password" />
+        </tr>
+        <tr><td><button type="submit">Login</button>
+        </tr>
+    </table>
+</form>
+
 
 <div><a href="ResetPasswordRequest">Forgot Password?</a></div>
 
