--- a/Pages/Shared/_layout_signed_out.cshtml
+++ b/Pages/Shared/_layout_signed_out.cshtml
@@ -1,5 +1,4 @@
 ﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
-@using Microsoft.AspNetCore.Http;
 
 @{
     bool is_admin = bd_util.is_user_admin(HttpContextAccessor.HttpContext);
@@ -11,34 +10,61 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>@ViewData["Title"] - @bd_config.get("AppName")</title>
     <link rel="stylesheet" href="~/css/budoco.css" />
+    <script>
+        function goto() {
+            var issue_id = $("#goto_id").val();
+            if (issue_id == 0)
+                alert("Enter issue ID#")
+            else
+                location.href = "/Issue?id=" + issue_id
+        }
+    </script>
 </head>
 
+@{
+    bd_util.console_write_line("layout_simple http status: " +
+            HttpContextAccessor.HttpContext.Response.StatusCode.ToString());
+    if (HttpContextAccessor.HttpContext.Response.StatusCode == 302)
+    {
 
-<body>
-    <div>
+        <body>This is a redirect</body>
+        IgnoreBody();
+        IgnoreSection("Scripts");
+    }
+    else
+    {
 
-        <ul class="navbar">
-            <li class="nav-item logo">
-                <a class="nav-link" asp-page="/Index">@bd_config.get("AppName")</a>
-            </li>
+        <body>
+            <table class="menu_table">
+                <tr>
+                    <td class="logo"><a class="logo" asp-page="/Index">@bd_config.get("AppName")</a></td>
 
-            <li class="nav-item">
-                <a class="nav-link" href="/About">About</a>
-            </li>
-        </ul>
-    </div>
+                    <td class="just_right">
 
-    <div class="render_body">
+                        <a href="/About">About</a>
+                    </td>
+                </tr>
+            </table>
 
-        @RenderBody()
-    </div>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+            <div class="content_parent">
+                <div class="content_child">
+                    @RenderBody()
+                </div>
+            </div>
 
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
+            <script src="~/lib/jquery/dist/jquery.min.js"></script>
+            <script src="~/js/site.js" asp-append-version="true"></script>
+
+            @await RenderSectionAsync("Scripts", required: false)
+
+        </body>
+    }
+}
 
 </html>
