fixed css errors

--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -168,7 +168,7 @@
                     
                     <tr id="email_fields" style="display:none"><td>
                         <label id="post_email_to_label">To:</label>
-                        <input class="post_form_to_input" asp-for="post_email_to" value="">
+                        <input class="post_form_email_to_input" asp-for="post_email_to" value="">
                     </td></tr>
 
                     <tr><td>
