now can do both left and center justification

--- a/Pages/Admin/Queries.cshtml
+++ b/Pages/Admin/Queries.cshtml
@@ -8,7 +8,9 @@
 <h1>@ViewData["Title"]</h1>
 <partial name="_FlashPartial" />
 
+<div class="just_left">
 <a href="Query?id=0">Create Issue Query</a>
+</div>
 
 <partial name="_CrudDataTableWithDeletePartial" />
 
