--- a/Pages/Admin/Status.cshtml
+++ b/Pages/Admin/Status.cshtml
@@ -11,7 +11,7 @@
 <div>
     <a href="Statuses">Back to Statuses</a>
 </div>
-
+<h1>COREY SAYS THIS PAGE NEEDS FORM TABLE </h1>
 <div class="form_div"></div>
 <form method="post">
 
@@ -26,7 +26,7 @@
 }
     <div>
         <label>Name</label>
-        <input asp-for="name" maxlength="40"></input>
+        <input class="name_input" asp-for="name" maxlength="40"></input>
     </div>
     <div>
         <label>Active</label>
