--- a/Pages/Admin/User.cshtml
+++ b/Pages/Admin/User.cshtml
@@ -6,12 +6,12 @@
 }
 
 <h1>Update User</h1>
-<div>
+<div class="just_left">
     <a href="Users">Back to Users</a>
 </div>
 <partial name="_FlashPartial" />
 
-
+<div class="form_div">
 <form method="post">
     <table class="form_table">
     <tr>
@@ -49,7 +49,7 @@
     <tr>
     </table>
 </form>
-
+</div>
 
 @section Scripts {
     
