--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -7,7 +7,7 @@
 
 <partial name="_FlashPartial" />
 
-<div class="content_just_left"> 
+<div class="just_left"> 
 
 @{
     if (HttpContext.Response.StatusCode == 200)
