--- a/Pages/ResetPassword.cshtml
+++ b/Pages/ResetPassword.cshtml
@@ -12,6 +12,7 @@
 <h1>Reset Password</h1>
 <partial name="_FlashPartial" />
 
+<div class="form_div">
 <form method="post">
     <table class="form_table">
     <tr>
@@ -27,6 +28,7 @@
     </tr>
     </table>
 </form>
+</div>
 
 <div><a href="Login">Login</a></div>
 
