--- a/Pages/ResetPasswordRequest.cshtml
+++ b/Pages/ResetPasswordRequest.cshtml
@@ -12,8 +12,9 @@
 <h1>Reset Password Request</h1>
 <partial name="_FlashPartial" />
 
-<div class="form-div">
-    <form class="reset_password_request_form" method="post">
+
+<div class="form_div">
+    <form method="post">
         <div><label>Email you registered with:</label>
             <input asp-for="email" />
         </div>
