--- a/Pages/Search.cshtml
+++ b/Pages/Search.cshtml
@@ -9,9 +9,8 @@
 <h1>Search Issues</h1>
 <partial name="_FlashPartial" />
 
-
-
-<form class="search_form" method="post">
+<div class="form_div">
+<form method="post">
     <table class="form_table">
         
     <tr>
