--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -12,8 +12,8 @@
 <h1>Register</h1>
 <partial name="_FlashPartial" />
 
-
-<form class="register_form" method="post">
+<div class="form_div">
+<form method="post">
     <table class="form_table">
     <tr>
         <td><label>Username</label>
@@ -32,9 +32,12 @@
     </tr>
     </table>
 </form>
+</div>
 
+<div>
 <div><a href="Login">Login</a></div>
 <div><a href="ResetPasswordRequest">Forgot Password?</a></div>
+</div>
 
 @section Scripts {
     
