--- a/Pages/Shared/_FlashPartial.cshtml
+++ b/Pages/Shared/_FlashPartial.cshtml
@@ -1,30 +1,36 @@
 @{
     // not a redirect
     if (Model.HttpContext.Response.StatusCode == 200)
+
     {
+        string msg = bd_util.get_flash_msg(Model.HttpContext);
+        var errs = bd_util.get_flash_errs(Model.HttpContext);
+        if (!string.IsNullOrEmpty(msg) || errs.Count > 0)
+        {  
+        <div class="flash_parent">
+            <div class="flash">
+                @{
+                    if (!string.IsNullOrEmpty(msg))
+                    {
+                        <div class="flash_msg">@msg</div>
+                    }
 
-        <div class="flash">
-            @{
-                string msg = bd_util.get_flash_msg(Model.HttpContext);
-                if (!string.IsNullOrEmpty(msg))
-                {
-                    <div class="flash_msg">@msg</div>
-                }
+                   
+                    if (errs.Count > 0)
+                    {
 
-                var errs = bd_util.get_flash_errs(Model.HttpContext);
-                if (errs.Count > 0)
-                {
-
-                    <div class="flash_err">
-                        @{
-                            foreach (string err in errs)
-                            {
-                                <div>@err</div>
+                        <div class="flash_err">
+                            @{
+                                foreach (string err in errs)
+                                {
+                                    <div>@err</div>
+                                }
                             }
-                        }
-                    </div>
+                        </div>
+                    }
                 }
-            }
+            </div>
         </div>
+        }
     }
 }
