--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Admin";
 }
 
-<div class="content_just_left">
+<div class="admin_inner">
     
 <h1>Admin</h1>
 <partial name="_FlashPartial" />
