--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -66,7 +66,7 @@
                                 <th class="@class_name fake_link" onclick="on_sort(@i)">@Model.dt.Columns[i].ColumnName</th>
                             }
                         }
-                        <th>Action</th>
+                        <th class="unsorted">Action</th>
                     </tr>
                     int start_row = (Model.page - 1) * bd_config.get("RowsPerPage");
                     int row_count = 0;
